working on fixing css compatability issues

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -23,7 +23,7 @@ p {
     background-position: center;
 }
 
-/* marketing meeting image end */
+/* marketing meeting image ends here */
 
 
 
@@ -62,7 +62,7 @@ a {
     color: #ffffff;
     text-decoration: none;
 }
-/* Header end */
+/* Header ends here */
 
 
 /* Content section start */
@@ -83,7 +83,7 @@ a {
     margin-left: 25px;
    
 }
-/* Images in content section end */
+/* Images in content section ends here */
 
 /* Articles start here */
 #search-engine-optimization, #online-reputation-management, #social-media-marketing{
@@ -104,10 +104,10 @@ a {
     font-size: 36px;
 }
 
-/* Articles end here */
+/* Articles ends here */
 
 
-/* ---- Content Section End ---- */
+/* ---- Content Section Ends ---- */
 
 
 /* benefits section and aside content start */
@@ -138,7 +138,7 @@ aside img {
     max-width: 150px;
 }
 
-/* benefit section and aside content end */
+/* benefit section and aside content ends here */
 
 /* footer start */
 footer {
@@ -152,4 +152,4 @@ footer h2 {
     font-size: 20px;
 }
 
-/* footer end */
+/* footer ends here */
